Remove event list height constraints and update calendar UI
- Remove Flexible widgets that constrained calendar and event list heights
- Allow event list to expand naturally to show all events
- Update event list and event card backgrounds to match calendar (white)
- Remove top navigation buttons (Today, Month, Week, Agenda)
- Implement new event card layout: Time → Vertical Bar → Event Details
- Add dynamic vertical bar colors (red for past, green for future events)
- Show creator avatars underneath event details
- Ensure all dimensions use responsive design tokens (no hardcoding)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   workmanager: ^0.5.2
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
+  flutter_neat_and_clean_calendar: ^0.4.16
 
 dev_dependencies:
   flutter_test:
